ImageWarp will correct WCS of input
Added corrections for the WCS structure of the input image so a point
in the input image now has the same world coordinates as a point in
the output image.

In the previous commit, the first pixel in the image had coordinates
(0.0f, 0.0f), now it has (1.0f, 1.0f).

Also removed the Gnuastro copyright information from the headers of
the output images since the Gnuastro copyright might have been
confused with the image copyright.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-04-02  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/imgwarp/imgwarp.c (imgwarppreparations): Coorected the point
+	(1.0f, 1.0f) to be center of the first pixel, not zero.
+
+	* lib/fitsarrayvv.c (copyrightandend): Removed the Copyright
+	notice of Gnuastro from the output image header. Since it might be
+	confused with a copyright on the data its self.
+
 2015-04-01  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/imgwarp/args.h: Temporarily removed the wrap option. Will be
