ImageWarp output pixels with no input set to NaN
When an output pixel does not correspond with an input pixel, until
now the value was set to 0.0f. Now the default method is to set it to
NaN and only if the user explicitly asks for it, they will be set to
0.0f.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -5220,6 +5220,12 @@ be called with @command{--matrix=a,b,c,d,e,f,g,h,1}.
 Do not correct the WCS information of the input image and save it
 untouched to the output image.
 
+@cindex NaN
+@item -z
+@itemx --zerofornoinput
+Set output pixels which do not correspond to any input to zero. By
+default they are set to NaN (Not a number).
+
 @end table
 
 
