--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2015-04-02  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
+	* lib/fitsarrayvv.c (changetype): Round floating point input types
+	for integer output types.
+	(arraytofitsimg): Added numblank as a variable, to deal with blank
+	pixels.
+
 	* src/imgwarp/imgwarp.c (imgwarppreparations): Coorected the point
 	(1.0f, 1.0f) to be center of the first pixel, not zero.
 
